added fourth task

--- a/src/app/training/user-list-main/user-list-main.component.html
+++ b/src/app/training/user-list-main/user-list-main.component.html
@@ -1,1 +1,4 @@
-<app-user-list-view [users]="users"></app-user-list-view>
+<div>
+  <div style="display: inline-block; vertical-align: top; "><app-user-list-view [users]="users"></app-user-list-view></div>
+  <div style="display: inline-block; vertical-align: top; "><app-favorite-list></app-favorite-list></div>
+</div>
