--- a/src/app/training/vehicle-list-main/vehicle-list-main.component.html
+++ b/src/app/training/vehicle-list-main/vehicle-list-main.component.html
@@ -1,2 +1,5 @@
-<app-vehicle-list-view [users]="users"></app-vehicle-list-view>
+<div>
+  <div style="display: inline-block; vertical-align: top; "><app-vehicle-list-view [vehicles]="vehicles"></app-vehicle-list-view></div>
+  <div style="display: inline-block; vertical-align: top; "><app-favorite-list></app-favorite-list></div>
+</div>
 
