--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-user-list-main></app-user-list-main>
-<app-vehicle-list-main></app-vehicle-list-main>
+<!--<app-user-list-main></app-user-list-main>
+<app-vehicle-list-main></app-vehicle-list-main>-->
+<!--<app-training-container></app-training-container>-->
+<router-outlet></router-outlet>
