--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,6 +36,10 @@ app-training-container section {
     margin-bottom: 10px;
   }
 
+  .mdc-button {
+    display: block;
+  }
+
   .mat-mdc-form-field {
     display: block;
 
@@ -52,6 +56,7 @@ app-training-container section {
     border: 2px solid sandybrown;
     margin: 15px;
     padding: 15px;
+    width: 50%;
   }
 
   .example-error-message {
