--- a/src/app/training/user-list-main/user-list-view/user-list-view.component.html
+++ b/src/app/training/user-list-main/user-list-view/user-list-view.component.html
@@ -5,7 +5,7 @@
         <ng-container *ngFor="let user of users">
             <li>
                 <div class="inlineDiv">
-                    <app-card [card]="user" (deleteClick)="delete($event)" (favorClick)="addToFavor($event)">
+                    <app-card [card]="user" (deleteClick)="delete($event)" (favorClick)="addToFavor($event)" (redirectClick)="redirectToEditUserPage($event)">
                     </app-card>
                 </div>
             </li>
