--- a/src/app/training/shared/card-module/card/card.component.html
+++ b/src/app/training/shared/card-module/card/card.component.html
@@ -1,11 +1,12 @@
 <div class="container">
-  <p >
+  <p>
     {{card.title}}
   </p>
   <p innerHTML="Description: {{card.description}}"></p>
   <p innerHTML="Additional info: {{card.additionalInfo}}"></p>
   <p>
     <button mat-raised-button color="primary" (click)="onSwitchFavorClick(card)">Add to Favorite/Remove from Favorite</button>
+    <button mat-raised-button color="accent" (click)="redirectToEdit()"><mat-icon>edit</mat-icon>Edit</button>
     <button mat-raised-button color="primary" (click)="onDeleteClick(card)">Delete</button>
   </p>
 </div>
