--- a/src/app/training/user-form/user-form.component.html
+++ b/src/app/training/user-form/user-form.component.html
@@ -1,89 +1,91 @@
 <section>
   <ng-container [formGroup]="userFormGroup">
-    <div class="example-element">
-      <mat-form-field>
-        <mat-label for="firstName">First Name: </mat-label>
-        <input matInput type="text" name="firstName" formControlName="firstName">
-        <mat-error *ngIf="userFormGroup.get('firstName')?.hasError('required')">
-          First Name is <strong>required</strong>
-        </mat-error>
-      </mat-form-field>
+      <div class="example-element">
 
-      <mat-form-field>
-        <mat-label for="lastName">Last Name: </mat-label>
-        <input matInput type="text" name="lastName" formControlName="lastName">
-        <mat-error *ngIf="userFormGroup.get('lastName')?.hasError('required')">
-          Last Name is <strong>required</strong>
-        </mat-error>
-      </mat-form-field>
+          <mat-form-field>
+              <mat-label for="firstName">First Name: </mat-label>
+              <input matInput type="text" name="firstName" formControlName="firstName">
+              <mat-error *ngIf="userFormGroup.get('firstName')?.hasError('required')">
+                  First Name is <strong>required</strong>
+              </mat-error>
+          </mat-form-field>
 
-      <mat-form-field>
-        <mat-label for="age">Age: </mat-label>
-        <input matInput type="number" name="age" formControlName="age">
-        <mat-error *ngIf="userFormGroup.get('age')?.hasError('required')">
-          Age is <strong>required</strong>
-        </mat-error>
-        <mat-error *ngIf="userFormGroup.get('age')?.hasError('max') || userFormGroup.get('age')?.hasError('min')">
-          Wrong <strong>count</strong>
-        </mat-error>
-      </mat-form-field>
+          <mat-form-field>
+              <mat-label for="lastName">Last Name: </mat-label>
+              <input matInput type="text" name="lastName" formControlName="lastName">
+              <mat-error *ngIf="userFormGroup.get('lastName')?.hasError('required')">
+                  Last Name is <strong>required</strong>
+              </mat-error>
+          </mat-form-field>
 
-      <mat-form-field>
-        <mat-label for="company">Company: </mat-label>
-        <input matInput type="text" name="company" formControlName="company">
-        <mat-error *ngIf="userFormGroup.get('company')?.errors?.['maxlength']">
-          Wrong company name <strong>length</strong>
-        </mat-error>
-      </mat-form-field>
+          <mat-form-field>
+              <mat-label for="age">Age: </mat-label>
+              <input matInput type="number" name="age" formControlName="age">
+              <mat-error *ngIf="userFormGroup.get('age')?.hasError('required')">
+                  Age is <strong>required</strong>
+              </mat-error>
+              <mat-error *ngIf="userFormGroup.get('age')?.hasError('max') || userFormGroup.get('age')?.hasError('min')">
+                  Wrong <strong>count</strong>
+              </mat-error>
+          </mat-form-field>
 
-      <mat-form-field>
-        <mat-label for="email">Email: </mat-label>
-        <input matInput type="email" name="email" formControlName="email">
-        <mat-error *ngIf="userFormGroup.get('email')?.hasError('email')">
-          Please enter a valid <strong>email address</strong>
-        </mat-error>
-        <mat-error *ngIf="userFormGroup.get('email')?.hasError('gmailDomain')">
-          Please enter a valid <strong>domain</strong>
-        </mat-error>
-        <mat-error *ngIf="userFormGroup.get('email')?.hasError('required')">
-          Email is <strong>required</strong>
-        </mat-error>
-        <mat-error *ngIf="userFormGroup.get('email')?.hasError('uniqEmail')">
-          Email already <strong>exists</strong>
-        </mat-error>
-      </mat-form-field>
+          <mat-form-field>
+              <mat-label for="company">Company: </mat-label>
+              <input matInput type="text" name="company" formControlName="company">
+              <mat-error *ngIf="userFormGroup.get('company')?.errors?.['maxlength']">
+                  Wrong company name <strong>length</strong>
+              </mat-error>
+          </mat-form-field>
 
-      <mat-form-field>
-        <mat-label for="department">Department:</mat-label>
-        <mat-select name="department" formControlName="department">
-          <mat-option>--</mat-option>
-          <mat-option *ngFor="let dep of departments" [value]="dep">{{dep}}</mat-option>
-        </mat-select>
-      </mat-form-field>
+          <mat-form-field>
+              <mat-label for="email">Email: </mat-label>
+              <input matInput type="email" name="email" formControlName="email">
+              <mat-error *ngIf="userFormGroup.get('email')?.hasError('email')">
+                  Please enter a valid <strong>email address</strong>
+              </mat-error>
+              <mat-error *ngIf="userFormGroup.get('email')?.hasError('gmailDomain')">
+                  Please enter a valid <strong>domain</strong>
+              </mat-error>
+              <mat-error *ngIf="userFormGroup.get('email')?.hasError('required')">
+                  Email is <strong>required</strong>
+              </mat-error>
+              <mat-error *ngIf="userFormGroup.get('email')?.hasError('uniqEmail')">
+                  Email already <strong>exists</strong>
+              </mat-error>
+          </mat-form-field>
 
-      <div>
-        <mat-label for="gender">Gender:</mat-label>
-        <div>
-          <mat-radio-group name="gender" formControlName="gender">
-            <mat-radio-button *ngFor="let gender of GenderValues" [value]="gender">
-              {{gender}}
-            </mat-radio-button>
-          </mat-radio-group>
-        </div>
+          <mat-form-field>
+              <mat-label for="department">Department:</mat-label>
+              <mat-select name="department" formControlName="department">
+                  <mat-option>--</mat-option>
+                  <mat-option *ngFor="let dep of departments" [value]="dep">{{dep}}</mat-option>
+              </mat-select>
+          </mat-form-field>
+
+          <div>
+              <mat-label for="gender">Gender:</mat-label>
+              <div>
+                  <mat-radio-group name="gender" formControlName="gender">
+                      <mat-radio-button *ngFor="let gender of GenderValues" [value]="gender">
+                          {{gender}}
+                      </mat-radio-button>
+                  </mat-radio-group>
+              </div>
+          </div>
+
+          <div>
+              <mat-label for="activated">Activated:</mat-label>
+              <div>
+                  <mat-checkbox name="activated" formControlName="activated"></mat-checkbox>
+              </div>
+          </div>
+
+          <div>
+              <app-addresses-form [form]="addressesGroup"></app-addresses-form>
+          </div>
+          <button mat-stroked-button color="primary" (click)="resetForm()">Reset form</button>
       </div>
-
-      <div>
-        <mat-label for="activated">Activated:</mat-label>
-        <div>
-          <mat-checkbox name="activated" formControlName="activated"></mat-checkbox>
-        </div>
-      </div>
-
-      <div>
-        <app-addresses-form [form]="addressesGroup"></app-addresses-form>
-      </div>
-    </div>
   </ng-container>
   <mat-error *ngIf="userFormGroup.invalid">From isn't valid</mat-error>
-  <button mat-raised-button color="primary" (click)="getFormGroupValue()">Save</button>
+  <button mat-raised-button color="primary" (click)="saveForm()">Save</button>
 </section>
