--- a/src/app/training/training-container.component.html
+++ b/src/app/training/training-container.component.html
@@ -1,8 +1,2 @@
-<div style="margin: 25px">
-  <div style="display: flex; gap: 7px;">
-    <a routerLink="./user-list" routerLinkActive="active"><span>1) UserList</span></a>
-    <!--<a routerLink="./vehicle-list" routerLinkActive="active"><span>2) VehicleList</span></a>-->
-    <a routerLink="./add-new-user" routerLinkActive="active"><span>2) AddNewUser</span></a>
-  </div>
-  <router-outlet></router-outlet>
-</div>
+<app-header></app-header>
+<router-outlet></router-outlet>
